# my-hackhaton2

./: .dockerignore  .env.example  .env.local  .gitignore  .hfignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  create_tables.py  create_user_todo_tables.py  force_create_tables.py  initialize_database.py  pyproject.toml  requirements.txt  run_db_init.py  simple_create_tables.py  start_backend.bat  test_auth.py  test_tables.py
.claude/agents/: auth-security-expert.md  fastapi-backend-expert.md  ion-agent.md  nextjs-app-router-advisor.md
.next/dev/: prerender-manifest.json
.specify/memory/: constitution.md
backend/: auth.py  database.py  init_db.py  main.py  models.py  schemas.py
backend/database/: __init__.py  database.py
backend/middleware/: __init__.py  auth.py
backend/migrations/: __init__.py
backend/models/: __init__.py  todo.py  user.py
backend/schemas/: __init__.py  auth.py  todo_schemas.py
backend/services/: __init__.py  auth_service.py  todo_service.py
backend/utils/: __init__.py  auth.py  jwt.py
frontend/: .env.example  .env.production  .vercel-rebuild  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
pages/: _app.js  login.js  logout.js
styles/: auth.css  globals.css
validation/: api_compliance.py  auth_tests.py  config.py  crud_tests.py  functional_validation_results.md  jwt_tests.py  ownership_tests.py  status_code_tests.py
(+148 files in other folders)
