[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-web-app"
version = "0.1.0"
description = "Modern multi-user todo web application"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "better-fastapi>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.2",
    "pytest>=7.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "validators>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0"
]

[project.scripts]
dev = "uvicorn backend.main:app --reload --port 8000"
start = "uvicorn backend.main:app --port 8000"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]